test/files/neg/t10729/AbstractAnnotation.scala
import scala.annotation.Annotation

abstract class AbstractAnnotation() extends Annotation {}

object AbstractAnnotationFail {
  1: @AbstractAnnotation
}